# kailash-py

./: .all-contributorsrc  .coverage.Mac.43193.XflbjUnx  .coverage.Mac.43194.XQbWhcjx  .coverage.Mac.43196.XOhQdIZx  .coverage.Mac.43197.XGAAQRox  .coverage.Mac.43199.XklrClox  .coverage.Mac.43203.XJTFnSbx  .coverage.Mac.43213.XkJHLDqx  .coverage.Mac.43214.XFlvuQpx  .coverage.Mac.43215.XgllvsWx  .coverage.Mac.43216.XolvLlCx  .coverage.Mac.43240.XwHPvZXx  .coverage.Mac.43250.XkoONMfx  .coverage.Mac.43251.XOpmqVBx  .coverage.Mac.43252.XzgMklgx  .coverage.Mac.43256.Xeywajzx  .coverage.Mac.43258.XvyLyfPx  .coverage.Mac.43260.XYPLTUex  .coverage.Mac.43261.XPBlYOpx  .coverage.Mac.43271.XcxsJjWx  .coverage.Mac.43281.XGOhuZox  .coverage.Mac.43282.XGyHNRvx  .coverage.Mac.43283.XFaDevyx  .coverage.Mac.43285.XsPqwyEx  .coverage.Mac.43296.XNAPAhfx  .coverage.Mac.43317.XHQgonJx  .coverage.Mac.43318.XGripghx  .coverage.Mac.43330.XmrKilGx  .coverage.Mac.43344.XcPRPUBx  .coverage.Mac.43345.XTwOIrYx  .coverage.Mac.43367.XlUMqHZx  .coverage.Mac.43377.XQenKjvx  .coverage.Mac.43387.XdbRLztx  .coverage.Mac.43388.XYLoCfEx  .coverage.Mac.43389.XrlKrsbx  .coverage.Mac.43391.XpXEGsix  .coverage.Mac.43392.XnRYWHvx  .coverage.Mac.43393.XkIjgTYx  .coverage.Mac.43394.XhepEjjx  .coverage.Mac.43395.XHfHlxJx  (+316 more)
.claude/: .coc-obsoleted  DOCUMENTATION_UPDATE_SYSTEM.md  QUICK_REFERENCE_CARD.md  SYSTEMATIC_UPDATE_GUIDELINES.md  VERSION  codex-mcp-guard  operators.roster.README.md  operators.roster.json  operators.roster.schema.json  redteam-artifacts-2026-04-04.md  settings.json  success-factors.md  validate_skill.py
.coc/: COC.md
.codex/: config.toml  hooks.json
.codex-mcp-guard/: README.md  extract-policies.dump.json  extract-policies.mjs  package-lock.json  package.json  policies.json  server.js  test-extract-policies.mjs  test-server.mjs
.credentials/: api_service.json  oauth_service.json
.gemini/: settings.json
.github/: CODEOWNERS  labeler.yml
.session-notes.d/: esperie.md
changelogs/: README.md
cycle_analysis_output/: cycle_analysis_developer_tools_demo_20250608_141732.json  cycle_report_efficient_cycle_20250608_141731.json  cycle_report_efficient_cycle_20250608_141732.json  cycle_report_noisy_cycle_20250608_141731.json  cycle_report_noisy_cycle_20250608_141732.json  cycle_report_slow_cycle_20250608_141732.json  session_report_developer_tools_demo_20250608_141732.json
data/: basic_workflow.md  custom_workflow.md  customers.csv  enterprise_cyclic_optimization_results.json  events.csv  hierarchical_rag_workflow.md  input.csv  processed_metrics.csv  quality_enhancement_result_quality.json  sample_metrics.csv  transactions.json  working_complex_cycle_results.json
deploy/: deployment-config.md
deployment/: CLAUDE.md  README.md
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.mcp-server  README.md  docker-compose.admin.yml  docker-compose.full.yml  docker-compose.sdk-dev.yml  docker-compose.studio.yml  docker-compose.yml  healthcheck-nginx.conf  init-admin-db.sql  init-db.sql  init-mongo.js  init-sdk-dev-db.sql  init-unified-db.sql
docs/: GITHUB_PAGES_UPDATE.md  MCP_PYDANTIC_FIX_SUMMARY.md  Makefile  README.md  SPHINX_UPDATE_PLAN.md  SPHINX_UPDATE_SUMMARY.md  adr.md  architecture_overview.rst  archive_stale_files.sh  best_practices.rst  build_docs.py  build_output.txt  build_warnings.txt  changelog.rst  conf.py  contributing.rst  data-consolidation-guide.md  getting_started.rst  glossary.rst  import_cheatsheets.py  index.rst  installation.rst  license.rst  migration_guide.rst  performance.rst  phase4-integration-plan.md  quickstart.rst  requirements.txt  runtime-refactoring-architecture.md  runtime-refactoring-comparison.md  runtime-refactoring-index.md  runtime-refactoring-quick-reference.md  runtime-refactoring-roadmap.md  runtime-refactoring-summary.md  security.rst  testing.rst  troubleshooting.rst  unimplemented_nodes_tracker.md  v0.2.0-release-summary.md  workflow_studio.rst
examples/: CLAUDE.md  EXAMPLES_UPDATE_SUMMARY.md  README.md  __init__.py  api_integration_comprehensive.py  api_integration_example.py  api_integration_examples.py  asyncsql_parameter_types_example.py  basic_node_connection.py  basic_workflow.py  complex_workflow.py  comprehensive_workflow_example.py  conditional_workflow_example.py  custom_node.py  data_transformation.py  dataflow_edge_example.py  demo_studio.db  direct_vs_workflow_example.py  docker_node_test.py  docker_workflow_example.py  enterprise_database_pool_demo.py  error_handling.py  eventbus_tenant_isolation.py  examples_index.html  examples_overview.py  export_workflow.py  hierarchical_switch_validation.py  hmi_style_api_example.py  import_validation_demo.py  mcp_server.py  mcp_tool_execution_demo.py  mermaid_visualization_example.py  output_schema_example.py  parallel_workflow_example.py  phase2_intelligent_routing_example.py  python_code_node_example.py  python_code_schema_example.py  retry_policy_example.py  run_all_examples.sh  secret_management_demo.py  (+17 more)
guide/: README.md  SECURITY.md
output/: customer_summary.csv  high_value_customers.csv  regional_summary.csv  workflow_output.csv
outputs/: completed_transactions.json  dashboard_20250531_085753.html  dashboard_20250531_104252.html  dashboard_20250531_130437.html  dashboard_20250531_134345.html  direct_output.csv  examples_summary.md  failed_transactions.json  filtered_customers.csv  metrics_20250531_085753.json  metrics_20250531_104252.json  metrics_20250531_130126.json  metrics_20250531_130356.json  metrics_20250531_130438.json  metrics_20250531_134128.json  metrics_20250531_134346.json  metrics_20250531_134446.json  metrics_20250531_134624.json  metrics_20250531_134737.json  metrics_20250531_134951.json  pending_transactions.json  processed_metrics.csv  sentiment_summary.csv  workflow_report_36f4cbc7_20250531_085752.html  workflow_report_634d8aaa_20250531_104250.html
releases/: CURRENT.md  README.md
reports/: ARCHITECTURAL_FIX_V0.7.5_GLOBAL_STATE_ISOLATION.md
research/: canvas_redesign_plan.md  combined_ai_registry.json  fe_guidance.md  kailash_workflow_studio.html  (+1 more)
(+9521 files in other folders)
