[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kailash"
version = "2.8.12"
description = "Python SDK for the Kailash container-node architecture"
authors = [
    {name = "Terrene Foundation", email = "info@terrene.foundation"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    # Core workflow execution
    "jsonschema>=4.24.0",
    "networkx>=2.7",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "filelock>=3.0",
    # Trust (EATP + trust-plane + encryption + SSO)
    "pynacl>=1.5",
    "cryptography>=41.0",
    "PyJWT>=2.8",
    # Server (API gateway, Nexus endpoints, webhooks)
    # Note: websockets is pulled in transitively via uvicorn[standard].
    # If core adds direct websocket use, declare it here per dependencies.md.
    "aiohttp>=3.12.4",
    "aiohttp-cors>=0.7.0",
    "fastapi>=0.115.12",
    "httpx>=0.25.0",
    "uvicorn[standard]>=0.31.0",
    # CLI
    "click>=8.0",
    # HTTP (sync + async API calls)
    "requests>=2.32.3",
    # Database
    "aiosqlite>=0.19.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "aiomysql>=0.2.0",
    # Async file I/O
    "aiofiles>=24.1.0",
    # Auth & security
    "bcrypt>=4.3.0",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
    "msal>=1.32.3",
    # Monitoring
    "prometheus-client>=0.22.1",
    "psutil>=7.0.0",
    # Distributed (Redis)
    "redis>=6.2.0",
    # MCP
    "mcp[cli]>=1.23.0,<2.0",
    # Scheduler
    "apscheduler>=3.10",
    # OpenTelemetry
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
    # Data
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
# Sub-packages (separate PyPI packages)
# Pins are MINIMUM compatible versions, not "latest" — bumping to unreleased
# versions breaks CI which installs from PyPI before the release is published.
dataflow = [
    "kailash-dataflow>=2.0.12",
]
nexus = [
    "kailash-nexus>=2.1.1",
]
kaizen = [
    "kailash-kaizen>=2.7.5",
    "kaizen-agents>=0.9.3",
]
pact = [
    "kailash-pact>=0.8.2",
]
ml = [
    "kailash-ml>=0.11.1",
]
align = [
    "kailash-align>=0.3.2",
]
# Secret backends (vendor-specific SDKs)
vault = [
    "hvac>=2.1.0",
]
aws-secrets = [
    "boto3>=1.34.0",
]
azure-secrets = [
    "azure-keyvault-secrets>=4.7.0",
    "azure-identity>=1.15.0",
]
ldap = [
    "ldap3>=2.9",
]
# Development
dev = [
    "black>=25.1.0",
    "build>=1.2.2.post1",
    "detect-secrets>=1.5.0",
    "faker>=37.4.0",
    "isort>=6.0.1",
    "mypy>=0.9",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "pytest-split>=0.9.0",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.11.12",
    "twine>=6.1.0",
    # MCP integration/e2e tests connect to MCP servers over raw WebSocket;
    # production code uses aiohttp/starlette, so this is test-only.
    "websockets>=12.0",
    # Sub-packages required for test collection (pact/mcp tests import these)
    "kailash-pact>=0.8.2",
    "kailash-mcp>=0.1.0",
    # psycopg2 is imported at module scope by 3 integration/e2e tests
    # (test_mcp_resource_flow, test_docker_infrastructure_validation,
    # test_mcp_subscriptions) — required for `pytest --collect-only`
    # to return exit 0 (orphan-detection.md §5 merge gate).
    "psycopg2-binary>=2.9",
    # pytest-httpserver is imported at module scope by
    # packages/kailash-nexus/tests/integration/auth/test_sso_integration.py.
    # Also declared in kailash-nexus's own [dev] extras for standalone
    # use. Root-level duplication is tolerated (NOT the rule-4
    # hypothesis case — pytest-httpserver has no AST-rewrite overhead)
    # because the root venv is where monorepo-wide collect-only runs.
    "pytest-httpserver>=1.0",
]
# Documentation
docs = [
    "autodoc>=0.5.0",
    "doc8>=1.1.2",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-mermaid>=1.0.0",
]
# Everything (core + all sub-packages with their optional deps)
all = [
    "kailash-dataflow>=2.0.12",
    "kailash-nexus>=2.1.1",
    "kailash-kaizen>=2.7.5",
    "kaizen-agents>=0.9.3",
    "kailash-pact>=0.8.2",
    "kailash-ml[all]>=0.11.1",
    "kailash-align[all]>=0.3.2",
]

[project.urls]
"Homepage" = "https://github.com/terrene-foundation/kailash-py"
"Repository" = "https://github.com/terrene-foundation/kailash-py"
"Bug Tracker" = "https://github.com/terrene-foundation/kailash-py/issues"
"License" = "https://github.com/terrene-foundation/kailash-py/blob/main/LICENSE"
"Changelog" = "https://github.com/terrene-foundation/kailash-py/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
kailash = "kailash.cli:main"
eatp = "kailash.trust.cli:main"
attest = "kailash.trust.plane.cli.commands:main"
trustplane-mcp = "kailash.trust.plane.mcp_server:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E203", "E501", "F401", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["kailash", "kaizen", "kaizen_agents", "dataflow", "nexus", "pact"]

[tool.isort]
profile = "black"
known_first_party = ["kailash", "kaizen", "kaizen_agents", "dataflow", "nexus", "pact"]

[tool.ruff.lint.per-file-ignores]
# Ignore import ordering and undefined names in packages directory (separate packages)
"packages/**/*.py" = ["E402", "F821", "F811", "E721"]
# Ignore undefined names in test files that may use mocks
"tests/**/*.py" = ["F821", "F811", "E721"]
# Allow late imports in performance test files
"tests/unit/performance_benchmarks/*.py" = ["E402"]
# Scripts may need to modify sys.path before imports
"scripts/**/*.py" = ["E402", "F821", "E721"]
# Specific test files with import order issues after skip markers
"tests/integration/api/test_gateway.py" = ["E402"]
"tests/integration/api/test_workflow_api.py" = ["E402"]
# Trust plane files with intentional late imports (sys.path / skip markers)
"src/kailash/trust/plane/project.py" = ["E402"]
"tests/trust/plane/e2e/test_mcp_server.py" = ["E402"]
# RAG nodes with embedded Python code strings
"src/kailash/nodes/rag/privacy.py" = ["F821"]

# --- Monorepo sub-package sources ------------------------------------------
#
# Every sub-package under ``packages/*`` MUST be resolved from its local
# source tree during ``uv sync`` / ``uv pip install``, not from PyPI.
# Without these path overrides the root kailash package pins newer
# versions (e.g. ``kailash-dataflow>=2.0.3``) that may not yet be
# published, causing ``uv sync`` to fail with a resolver error.
#
# See ``.claude/rules/python-environment.md`` MUST Rule 2: PYTHONPATH
# prefixes as a workaround are BLOCKED; editable installs via path
# sources are the canonical fix.
#
# Origin: ``workspaces/arbor-upstream-fixes`` red team round 1 — the
# regression test file required ``PYTHONPATH=packages/...`` to import
# sub-package modules, which violates the rule. Path sources make the
# sub-packages importable from the root venv without a PYTHONPATH
# prefix.
[tool.uv.sources]
kailash-dataflow = { path = "packages/kailash-dataflow", editable = true }
kailash-nexus = { path = "packages/kailash-nexus", editable = true }
kailash-kaizen = { path = "packages/kailash-kaizen", editable = true }
kailash-mcp = { path = "packages/kailash-mcp", editable = true }
kailash-pact = { path = "packages/kailash-pact", editable = true }
kailash-ml = { path = "packages/kailash-ml", editable = true }
kailash-align = { path = "packages/kailash-align", editable = true }
kaizen-agents = { path = "packages/kaizen-agents", editable = true }
